# judgesync

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  py.typed  pyproject.toml  ruff.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
examples/: async_example.py  basic_usage.ipynb  basic_usage.py  judge_comparison.py  judge_comparisons.ipynb  sample_data.csv
judgesync/: __init__.py  __main__.py  alignment.py  comparison.py  data_loader.py  judge.py  metrics.py  types.py
tests/: test_alignment.py  test_data_loader.py  test_judge.py  test_metrics.py  test_types.py
