[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "judgesync"
version = "0.1.0"
description = "A Python package for aligning LLM judges to human preferences"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"  # This should be here, not in scripts
authors = [
    {name = "James Asher", email = "jamesasher@microsoft.com"},
]
keywords = ["llm", "evaluation", "alignment", "judge", "metrics", "azure", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "openai>=1.0.0",
    "azure-identity>=1.14.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "mypy>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/judgesync"
"Bug Tracker" = "https://github.com/yourusername/judgesync/issues"

[project.scripts]
judgesync = "judgesync.__main__:main"  # This is the correct format for scripts

[tool.setuptools]
package-dir = {"" = "."}
packages = ["judgesync"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
